--- a/src/Agronomia.Angular/src/app/main/password-verification/password-verification.component.html
+++ b/src/Agronomia.Angular/src/app/main/password-verification/password-verification.component.html
@@ -8,7 +8,7 @@
         <h2 class="text-xl font-bold tracking-tight text-text-main-light dark:text-text-main-dark">AgroConnect</h2>
       </div>
       <div class="flex items-center gap-4">
-        <a class="hidden sm:flex text-sm font-medium text-text-secondary-light dark:text-text-secondary-dark hover:text-primary transition-colors" routerLink="/faq">
+        <a class="hidden sm:flex text-sm font-medium text-text-secondary-light dark:text-text-secondary-dark hover:text-primary transition-colors" routerLink="/platform/faq">
           Precisa de ajuda?
         </a>
         <button class="flex items-center justify-center px-5 h-9 rounded-lg bg-border-light dark:bg-border-dark hover:bg-primary/20 dark:hover:bg-primary/20 text-text-main-light dark:text-text-main-dark text-sm font-bold transition-colors" type="button" routerLink="/authentication">
