--- a/src/Agronomia.Angular/src/app/main/password-verification/password-verification.component.html
+++ b/src/Agronomia.Angular/src/app/main/password-verification/password-verification.component.html
@@ -5,7 +5,7 @@
         <div class="size-8 rounded-lg bg-primary/20 flex items-center justify-center text-primary">
           <span class="material-symbols-outlined text-2xl">agriculture</span>
         </div>
-        <h2 class="text-xl font-bold tracking-tight text-text-main-light dark:text-text-main-dark">AgroConnect</h2>
+        <h2 class="text-xl font-bold tracking-tight text-text-main-light dark:text-text-main-dark">Agronomia</h2>
       </div>
       <div class="flex items-center gap-4">
         <a class="hidden sm:flex text-sm font-medium text-text-secondary-light dark:text-text-secondary-dark hover:text-primary transition-colors" routerLink="/faq">
